# CEngine

./: CMakeLists.txt  gen_proj_vs2022.bat
Archive/HelloWorld/: main.cpp
assets/materials/: brick.mat  suzanne.mat
assets/models/sten_gunmachine_carbine/: license.txt  scene.gltf
assets/scenes/: scene.sc
assets/shaders/: fragment.glsl  vertex.glsl
engine/: CMakeLists.txt
engine/source/: Application.cpp  Application.h  CEngine.h  Common.h  Engine.cpp  Engine.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexLayout.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/io/: FileSystem.cpp  FileSystem.h
engine/source/physics/: Collider.cpp  Collider.h  KinematicCharacterController.cpp  KinematicCharacterController.h  PhysicsManager.cpp  PhysicsManager.h  RigidBody.cpp  RigidBody.h
engine/source/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h
engine/source/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
engine/source/scene/components/: AnimationComponent.cpp  AnimationComponent.h  CameraComponent.cpp  CameraComponent.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h
engine/source/utils/: Debug.cpp
lessons/chapter1/: Lesson 1.0 (Preparation).md  Lesson 1.1 (First Window).md  Lesson 1.2 (OpenGL Initialization).md  Lesson 1.3 (Vertices).md  Lesson 1.4 (Graphics Pipeline).md  Lesson 1.5 (Shaders).md  Lesson 1.6 (Vertex Buffers + Rendering).md  Lesson 1.7 (Vertex Color).md  Lesson 1.8 (Basic Input + Uniforms).md  Lesson 1.9 (First game).md  Lesson+1.1+(First+Window).md
source/: Game.cpp  Game.h  Player.cpp  Player.h  TestObject.cpp  TestObject.h  a.out  main.cpp
source/math/: Vector.h
source/utils/: Debug.cpp  Debug.h
