cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

project(CEngine)

set(ASSETS_DIR "${CMAKE_SOURCE_DIR}/assets")

configure_file(
	${PROJECT_SOURCE_DIR}/config.h.in
	${PROJECT_BINARY_DIR}/config.h
)

set(PROJECT_SOURCE_FILES
	source/Engine.h
	source/Engine.cpp
	source/Application.h
	source/Application.cpp
    source/utils/Debug.cpp
	source/input/InputManager.h
	source/input/InputManager.cpp
	source/graphics/ShaderProgram.h
	source/graphics/ShaderProgram.cpp
	source/graphics/GraphicsAPI.h
	source/graphics/GraphicsAPI.cpp
	source/graphics/Texture.h
	source/graphics/Texture.cpp
	source/render/Material.h
	source/render/Material.cpp
	source/render/Mesh.h
	source/render/Mesh.cpp
	source/render/RenderQueue.h
	source/render/RenderQueue.cpp
	source/scene/GameObject.h
	source/scene/GameObject.cpp
	source/scene/Scene.h
	source/scene/Scene.cpp
	source/scene/Component.h
	source/scene/Component.cpp
	source/scene/components/MeshComponent.h
	source/scene/components/MeshComponent.cpp
	source/scene/components/CameraComponent.h
	source/scene/components/CameraComponent.cpp
	source/scene/components/PlayerControllerComponent.h
	source/scene/components/PlayerControllerComponent.cpp
	source/scene/components/LightComponent.h
	source/scene/components/LightComponent.cpp
	source/scene/components/AnimationComponent.h
	source/scene/components/AnimationComponent.cpp
	source/scene/components/PhysicsComponent.h
	source/scene/components/PhysicsComponent.cpp
	source/io/FileSystem.h
	source/io/FileSystem.cpp
	source/Common.h
	source/physics/PhysicsManager.h
	source/physics/PhysicsManager.cpp
	source/physics/Collider.h
	source/physics/Collider.cpp
	source/physics/RigidBody.h
	source/physics/RigidBody.cpp
	source/physics/KinematicCharacterController.h
	source/physics/KinematicCharacterController.cpp
)

include_directories(source)
add_library(${PROJECT_NAME} ${PROJECT_SOURCE_FILES})

# Add GLFW library
add_subdirectory(thirdparty/glfw-3.4 "${CMAKE_CURRENT_BINARY_DIR}/glfw_build")
include_directories(thirdparty/glfw-3.4/include)

# Add Glew library
set(BUILD_UTILS OFF CACHE BOOL "utilities" FORCE)
add_subdirectory(thirdparty/glew/build/cmake "${CMAKE_CURRENT_BINARY_DIR}/glew_build")
include_directories(thirdparty/glew/include)
set_property(TARGET glew_s PROPERTY FOLDER GLEW)
set_property(TARGET glew PROPERTY FOLDER GLEW)

# Include Assets Directories
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_BINARY_DIR})

# Add GLM library
add_subdirectory(thirdparty/glm-1.0.1/glm)
include_directories(thirdparty/glm-1.0.1)

# Add stb_image for image loading
include_directories(thirdparty/stb_image)

# Add Json library
include_directories(thirdparty/json)

# Add cgltf for GLTF model loading
include_directories(thirdparty/cgltf)

# Inclue Buleet as a subdirectory
option(BUILD_UNIT_TESTS OFF)
option(BUILD_BULLET2_DEMOS OFF)
option(BUILD_EXTRAS OFF)
option(BUILD_SHARED_LIBS OFF)
add_subdirectory(thirdparty/bullet3-3.25)
target_include_directories(${PROJECT_NAME} PRIVATE thirdparty/bullet3-3.25/src)

# Link all thirdparty libraries
target_link_libraries(${PROJECT_NAME} 
    glfw 
    glew_s
	glm
	LinearMath
	BulletCollision
	BulletDynamics
)

add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy_directory
	${ASSETS_DIR}
	${CMAKE_BINARY_DIR}/assets
)